@@ -14,6 +14,8 @@
  */
 package org.hyperledger.besu.ethereum.eth;
 
+import static java.util.stream.Collectors.toUnmodifiableList;
+
 import org.hyperledger.besu.config.experimental.RayonismOptions;
 import org.hyperledger.besu.ethereum.eth.messages.EthPV62;
 import org.hyperledger.besu.ethereum.eth.messages.EthPV63;
@@ -24,6 +26,8 @@ import org.hyperledger.besu.ethereum.p2p.rlpx.wire.SubProtocol;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Stream;
 
 /**
  * Eth protocol messages as defined in
@@ -35,11 +39,12 @@ public class EthProtocol implements SubProtocol {
   public static final Capability ETH63 = Capability.create(NAME, EthVersion.V63);
   public static final Capability ETH64 = Capability.create(NAME, EthVersion.V64);
   public static final Capability ETH65 = Capability.create(NAME, EthVersion.V65);
+  public static final Capability ETH66 = Capability.create(NAME, EthVersion.V66);
 
   private static EthProtocol INSTANCE;
 
   private static final List<Integer> eth62Messages =
-      Arrays.asList(
+      List.of(
           EthPV62.STATUS,
           EthPV62.NEW_BLOCK_HASHES,
           EthPV62.TRANSACTIONS,
@@ -49,25 +54,38 @@ public class EthProtocol implements SubProtocol {
           EthPV62.BLOCK_BODIES,
           EthPV62.NEW_BLOCK);
 
-  private static final List<Integer> eth63Messages = new ArrayList<>(eth62Messages);
+  private static final List<Integer> eth63Messages =
+      Stream.concat(
+              eth62Messages.stream(),
+              Stream.of(
+                  EthPV63.GET_NODE_DATA, EthPV63.NODE_DATA, EthPV63.GET_RECEIPTS, EthPV63.RECEIPTS))
+          .collect(toUnmodifiableList());
 
-  static {
-    eth63Messages.addAll(
-        Arrays.asList(
-            EthPV63.GET_NODE_DATA, EthPV63.NODE_DATA, EthPV63.GET_RECEIPTS, EthPV63.RECEIPTS));
-  }
-
-  private static final List<Integer> eth65Messages = new ArrayList<>(eth63Messages);
+  private static final List<Integer> eth65Messages =
+      Stream.concat(
+              eth63Messages.stream(),
+              Stream.of(
+                  EthPV65.NEW_POOLED_TRANSACTION_HASHES,
+                  EthPV65.GET_POOLED_TRANSACTIONS,
+                  EthPV65.POOLED_TRANSACTIONS))
+          .collect(toUnmodifiableList());
 
   private static final List<Integer> mergeSupportExcludedMessages =
       Arrays.asList(EthPV62.NEW_BLOCK_HASHES, EthPV62.NEW_BLOCK);
 
-  static {
-    eth65Messages.addAll(
-        Arrays.asList(
-            EthPV65.NEW_POOLED_TRANSACTION_HASHES,
+  public static boolean requestIdCompatible(final int code) {
+    return Set.of(
+            EthPV62.GET_BLOCK_HEADERS,
+            EthPV62.BLOCK_HEADERS,
+            EthPV62.GET_BLOCK_BODIES,
+            EthPV62.BLOCK_BODIES,
             EthPV65.GET_POOLED_TRANSACTIONS,
-            EthPV65.POOLED_TRANSACTIONS));
+            EthPV65.POOLED_TRANSACTIONS,
+            EthPV63.GET_NODE_DATA,
+            EthPV63.NODE_DATA,
+            EthPV63.GET_RECEIPTS,
+            EthPV63.RECEIPTS)
+        .contains(code);
   }
 
   private final List<Integer> disabledProtocolMessages;
@@ -89,6 +107,7 @@ public class EthProtocol implements SubProtocol {
       case EthVersion.V63:
       case EthVersion.V64:
       case EthVersion.V65:
+      case EthVersion.V66:
         // same number of messages in each range, eth65 defines messages in the middle of the
         // range defined by eth63 and eth64 defines no new ranges.
         return 17;
@@ -109,6 +128,7 @@ public class EthProtocol implements SubProtocol {
       case EthVersion.V64:
         return eth63Messages.contains(code);
       case EthVersion.V65:
+      case EthVersion.V66:
         return eth65Messages.contains(code);
       default:
         return false;
@@ -167,5 +187,10 @@ public class EthProtocol implements SubProtocol {
     public static final int V63 = 63;
     public static final int V64 = 64;
     public static final int V65 = 65;
+    public static final int V66 = 66;
+  }
+
+  public static boolean isEth66Compatible(final Capability capability) {
+    return NAME.equals(capability.getName()) && capability.getVersion() >= ETH66.getVersion();
   }
 }
